# Restful-FastAPI-Template-MVC-like

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/controllers/: AuthController.py  UserController.py
app/exceptions/: CustomExceptions.py  handlers.py
app/middleware/: cors.py
app/models/: BaseModel.py  Role.py  User.py  __init__.py
app/repositories/: BaseRepository.py  UserRepository.py
app/routes/: auth_routes.py  firebase_routes.py  user_routes.py
app/schemas/: auth_schema.py  user_schema.py
app/services/: AuthService.py  UserService.py
app/utils/: dependencies.py  firebase_auth.py  security.py
config/: database.py  settings.py
database/migrations/: env.py
database/migrations/versions/: c9aee1fdc42c_initial_migration_create_users_table.py
docker/app/: Dockerfile
